2006-04-25  Riccardo Mottola <riccardo@kaffe.org>

	* awt-implementations/kaffe/java/awt/event/HierarchyBoundsAdapter.java,
	awt-implementations/kaffe/java/awt/event/HierarchyBoundsListener.java,
	awt-implementations/kaffe/java/awt/event/HierarchyEvent.java
	awt-implementations/kaffe/java/awt/event/HierarchyListener.java:
	removed, so to use classath

2006-04-24  Riccardo Mottola <riccardo@kaffe.org>

	* awt-implementations/kaffe/java/awt/ActionEvt.java,
	awt-implementations/kaffe/java/awt/MouseEvt.java,
	awt-implementations/kaffe/java/awt/event/ActionEvent.java:
	improved mouse pressed and released events.
	
2006-04-24  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/MouseEvt.java:
	removed package-protected field "button" so that the MouseEvent field is used.

2006-04-24  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/AttributeValue.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/BufferCapabilities.java,
	libraries/javalib/awt-implementations/kaffe/java/awt/Transparency.java:
	removed so classpath versions are used.

2006-04-24  Riccardo Mottola <riccardo@kaffe.org>

	* libraries/javalib/awt-implementations/kaffe/java/awt/MouseEvt.java:
	removed an empty method which should not be used anyway

2006-04-24  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/exception.c (dispatchException): Added missing
	cast to fix compiler warning.

2006-04-23  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/Makefile.am: Removed stringParsing.c and 
	stringParsing.h.

	* kaffe/kaffevm/stringParsing.c,
	kaffe/kaffevm/stringParsing.h: Removed since only used for jit testing. 
	Moved over to ...

	* test/internal/stringParsing.c,
	test/internal/stringParsing.h: ... here.

	* test/internal/Makefile.am (jitBasic_SOURCES) Added stringParsing.c
	and stringParsing.h.

2006-04-23  Dalibor Topic  <robilad@kaffe.org>

	* config/powerpc/jit3-powerpc.def: Fixed small powerpc