@@ -34,24 +34,83 @@ import gnu.classpath.Pointer;
 public class AWTEvent
   extends EventObject
 {
-	protected int id;
-	protected boolean consumed;
-	protected AWTEvent next;
-	final private static long serialVersionUID = -1825314779160409405L;
-	public static final long COMPONENT_EVENT_MASK = 0x01;
-	public static final long CONTAINER_EVENT_MASK = 0x02;
-	public static final long FOCUS_EVENT_MASK = 0x04;
-	public static final long KEY_EVENT_MASK = 0x08;
-	public static final long MOUSE_EVENT_MASK = 0x10;
-	public static final long MOUSE_MOTION_EVENT_MASK = 0x20;
-	public static final long WINDOW_EVENT_MASK = 0x40;
-	public static final long ACTION_EVENT_MASK = 0x80;
-	public static final long ADJUSTMENT_EVENT_MASK = 0x100;
-	public static final long ITEM_EVENT_MASK = 0x200;
-	public static final long TEXT_EVENT_MASK = 0x400;
-        public static final long INPUT_METHOD_EVENT_MASK = 0x800;
-	public static final int RESERVED_ID_MAX = 1999;
-	  /**
+  /**
+   * Compatible with JDK 1.1+.
+   */
+  private static final long serialVersionUID = -1825314779160409405L;
+  
+    /**
+   * The ID of the event.
+   *
+   * @see #getID()
+   * @see #AWTEvent(Object, int)
+   * @serial the identifier number of this event
+   */
+  protected int id;
+
+  /**
+   * Indicates if the event has been consumed. False mean it is passed to
+   * the peer, true means it has already been processed. Semantic events
+   * generated by low-level events always have the value true.
+   *
+   * @see #consume()
+   * @see #isConsumed()
+   * @serial whether the event has been consumed
+   */
+  protected boolean consumed;
+
+  /**
+   * Who knows? It's in the serial version.
+   *
+   * @serial No idea what this is for.
+   */
+  byte[] bdata;
+  
+    /** Mask for selecting component events. */
+  public static final long COMPONENT_EVENT_MASK = 0x00001;
+
+  /** Mask for selecting container events. */
+  public static final long CONTAINER_EVENT_MASK = 0x00002;
+
+  /** Mask for selecting component focus events. */
+  public static final long FOCUS_EVENT_MASK = 0x00004;
+
+  /** Mask for selecting keyboard events. */
+  public static final long KEY_EVENT_MASK = 0x00008;
+
+  /** Mask for mouse button events. */
+  public static final long MOUSE_EVENT_MASK = 0x00010;
+
+  /** Mask for mouse motion events. */
+  public static final long MOUSE_MOTION_EVENT_MASK = 0x00020;
+
+  /** Mask for window events. */
+  public static final long WINDOW_EVENT_MASK = 0x00040;
+
+  /** Mask for action events. */
+  public static final long ACTION_EVENT_MASK = 0x00080;
+
+  /** Mask for adjustment events. */
+  public static final long ADJUSTMENT_EVENT_MASK = 0x00100;
+
+  /** Mask for item events. */
+  public static final long ITEM_EVENT_MASK = 0x00200;
+
+  /** Mask for text events. */
+  public static final long TEXT_EVENT_MASK = 0x00400;
+
+  /**
+   * Mask for input method events.
+   * @since 1.3
+   */
+  public static final long INPUT_METHOD_EVENT_MASK = 0x00800;
+
+  /**
+   * Mask if input methods are enabled. Package visible only.
+   */
+  static final long INPUT_ENABLED_EVENT_MASK = 0x01000;
+
+  /**
    * Mask for paint events.
    * @since 1.3
    */
@@ -62,8 +121,20 @@ public class AWTEvent
    * @since 1.3
    */
   public static final long INVOCATION_EVENT_MASK = 0x04000;
-  
-    /**
+
+  /**
+   * Mask for hierarchy events.
+   * @since 1.3
+   */
+  public static final long HIERARCHY_EVENT_MASK = 0x08000;
+
+  /**
+   * Mask for hierarchy bounds events.
+   * @since 1.3
+   */
+  public static final long HIERARCHY_BOUNDS_EVENT_MASK = 0x10000;
+
+  /**
    * Mask for mouse wheel events.
    * @since 1.4
    */
@@ -74,15 +145,28 @@ public class AWTEvent
    * @since 1.4
    */
   public static final long WINDOW_STATE_EVENT_MASK = 0x40000;
-  
-    /**
+
+  /**
    * Mask for window focus events.
    * @since 1.4
    */
   public static final long WINDOW_FOCUS_EVENT_MASK = 0x80000;
-  
+
+  /**
+  * This is the highest number for event ids that are reserved for use by
+  * the AWT system itself. Subclasses outside of java.awt should use higher
+  * ids.
+  */
+  public static final int RESERVED_ID_MAX = 1999;
+
+
+    
+  protected AWTEvent next;
+
+// TODO check if these can be eliminated  
 	final static long DISABLED_MASK = 0x80000000;
 	final static long TEMP_DISABLED_MASK = 0x40000000;
+	
 	static Component keyTgt;
 	static Window activeWindow;
 	static Component mouseTgt;
@@ -180,9 +264,19 @@ protected static void sendEvent ( AWTEvent e, boolean sync ) {
       Toolkit.eventQueue.postEvent( e);
 }
 
-static void setSource ( AWTEvent evt, Object newSource ) {
-	evt.source = newSource;
-}
+
+  /**
+   * Retarget the event, such as converting a heavyweight component to a
+   * lightweight child of the original. This is not for general use, but
+   * is for event targeting systems like KeyboardFocusManager.
+   *
+   * @param source the new source
+   * @since 1.4
+   */
+  public void setSource(Object source)
+  {
+    this.source = source;
+  }
 
 public String toString () {
 	StringBuffer result = new StringBuffer(getClass().getName());
